--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 :root {
 
   --color-primary: #FB3477;
-  --color-secondary: #caffc1cc;
-  --color-background: #F5F5F5;
+  --color-secondary: #caffc1;
+  --color-background: #ffffff;
 
 }
